# prost-test

./: Cargo.toml  build.rs
proto/: foo.proto
proto/bar/: baz.proto
src/: main.rs
