[package]
name = "prost-test"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
hyper = "0.12.19"
prost = "0.4.0"
prost-derive = "0.4.0"
prost-twirp = "0.1.0"
tokio-core = "0.1.17"
bytes = "0.4.11"

[build-dependencies]
prost-build = "0.3.0"
prost-twirp = { version = "0.1.0", features = ["service-gen"] }
